*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2203-03-18 Caleb Tennis <caleb@aei-tech.com>
+	* Modified IDEAl panel layouts to be a little smarter (hopefully)
+
 2003-03-18 Roberto Raggi <roberto@kdevelop.org>
 	* added the new "Add Methods" wizard
 	* added the new "Add Attributes" wizard
