--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-03-20 Roberto Raggi <roberto@kdevelop.org>
+	* improved code completion
+
 2003-03-19 Caleb Tennis <caleb@aei-tech.com>
 	* Tagged Alpha 4
 
