--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-03-25 Roberto Raggi <roberto@kdevelop.org<
+	* improved the plugin framework
+	* added DCOP interfaces for FilterPart and CppSupportPart
+	
 2003-03-21 Roberto Raggi <roberto@kdevelop.org>
 	*  better support for namespace and inner classes
 
