--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-03-26  Roland Krause  <roland@ca.wai.com>
+	* Renamed main.f77 to main.f and adopted the various files. 
+	  The simple hello world fortran application now works. 
+
 2003-03-26 Roberto Raggi <roberto@kdevelop.org>
 	* added showPart() to KDevPlugin
 	* added KNotes plugin (ported from Kontact plugin)
