--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-03-29 Alexander Dymo <cloudtemple@mksat.net>
+    * C/C++ "New class" dialog improvements:
+    - Editor for base class file names
+    - Base class include files can be set as global or local
+    - Customizable templates for c++, objective-c, gtk classes
+    - Various global generation options (uppercase and lowercase names, etc.)
+
 2003-03-29 F@lk Brettschneider <falkbr@kdevelop.org>
 	* applied patch of Luc Willems <Willems.luc@pandora.be>
 	  that highly improves the class tool-view for Perl projects
