--- a/TODO
+++ b/TODO
@@ -7,7 +7,6 @@ High priority tasks!
 * konsole part:
   - cd's when selecting a file, but doesn't when selecting a dir
     desired: a menu option to "cd" to that directory
-  - CTRL-C doesn't work, typing ../ does weird things
 
 * automake part:
   - Should be able to DND files from other targets / file list / konq
@@ -17,8 +16,6 @@ High priority tasks!
 
 * UI bugs:
   - editor options dialog missing when all views are closed
-  - messages view should hold place when scrolled but new output is
-    being added
   - If you click an error in the output view, "Next Error"/"Previous Error"
     should then start from that point.
   - Messages in status bar would look nicer if they appeared with the same
@@ -30,7 +27,6 @@ High priority tasks!
   - Tag file creation fails silently if ctags is not installed
 
 * misc:
-  - Trying Java projects results in mysterious error messages
   - Project name should be able to contain spaces
 
 * code completion:
@@ -44,17 +40,12 @@ These are things that must be accomplished before we can say that
 gideon >= kdevelop 2.x UI-wise and functionality-wise!
 
 * general UI issues:
-  - new file: a New File action in File menu & class/file views
-  - toplevel UI mode broken
+  - toplevel UI mode broken concerning to the accels
   - [Modified] missing in mainframe caption
   - captions missing for toolbar buttons
 
-* cppsupport:
-  - new class dialog belongs in File menu
-
 * doctreeview:
   - use kdoc to update Qt/KDE docs
-  - navigation toolbar
 
 * editing:
   - RMB on qeditor doesn't have the 'Switch to declaration/definition'
@@ -79,7 +70,7 @@ UIs that intuitively ought to be there
 * automakemanager:
   - install, etc. targets besides "build" for subproject menus & toolbar
 
-* TopLevel SDI UI-mode:
+* IDEAl UI-mode:
    -> Extend KDevPlugin-API in order to have a preferred border for at least the selection parts
        (Automake Manager, Class Browser, File Groups, etc...)
 
@@ -97,7 +88,6 @@ Other Issues
 
 * mid-term:
 
-  - valgrind!
   - use mimetype to determine code files, not extension
 
 * long-term:
@@ -130,8 +120,6 @@ Other Issues
 
 6. Misc.
 --------
-
-* mhk: add doc comments to the lib files I changed ;)
 
 * Update configure.in when sub projects are added and the
   project doesn't use am_edit
