* Simplified the "Inteligent messages auto-hide" code a lot but at the same time added some features   - Now it also works for AutoMake&friends and configure   - It no longer uses signals now it directly calls two functions of the kDevMainWindow class   - Concentrated the code in the parts/outputviews/makewidget.cpp file instead of spreaded in the project parts   - Made the prework to add the same kind of functionality to the non IDEAl ui modes. The code to do it has to be added in theMainwindow.cpp file. * Solved part of the bug#56476

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-05 Amilcar Lucas <a.lucas@tu-bs.de>
+    - Simplified the "Inteligent messages auto-hide" code a lot
+    - Now it also works for AutoMake&friends and configure
+
 2003-04-01 Alexander Dymo <cloudtemple@mksat.net>
     * C/C++ "New class" dialog improvements:
     - Nested namespace support
