*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2003-04-08 Caleb Tennis <caleb@aei-tech.com>
+    * Retag Alpha 4
+
 2003-04-05 Alexander Dymo <cloudtemple@mksat.net>
     Applied patch from Luc Willems <Willems.luc@pandora.be>:
     Classview:
