--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-09 Harald Fernengel <harry@kdevelop.org>
+    * Applied ClearCase part from Ajay Guleria
+    * Goto error now works again
+
 2003-04-08 Caleb Tennis <caleb@aei-tech.com>
     * Retag Alpha 4
 
